# API-Client

./: .gitignore  ARCHITECTURE.md  FEATURES.md  IMPLEMENTATION_ROADMAP.json  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  TEST_RESULTS.md  app.py  demo_phase2_3.py  frontend_server.py  index.html  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
apiclient/: __init__.py  __main__.py  cli.py  client.py  config.py  formatter.py  phase1.py  phase2.py  phase3.py
backend/: server.py
frontend/: .env.example  index.html  package-lock.json  package.json  standalone.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AssertionBuilder.css  AssertionBuilder.jsx  EnvironmentManager.css  EnvironmentManager.jsx  InfoPage.css  InfoPage.jsx  RequestBuilder.css  RequestBuilder.jsx  ResponseViewer.css  ResponseViewer.jsx  Sidebar.css  Sidebar.jsx
