[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apiclient"
version = "0.1.0"
description = "A lightweight HTTP API testing CLI tool"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
]

[project.scripts]
apiclient = "apiclient.cli:app"
